# system_perf_rs

./: .gitignore  .gitlab-ci.yml  .gitpod.yml  Cargo.toml  Makefile  README.md  build_in_centos7.sh  run_in_docker.sh
.github/workflows/: build.yml
benches/: bench_entry.rs  my_benchmark.rs
deployment/: Dockerfile
freq_test/: freq.c
hellosimd/: Cargo.toml  Makefile
hellosimd/src/: main.rs
src/: branch_prediction.rs  lib.rs  main.rs  taylor.rs  timer.rs
