[package]
name = "system_perf"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-format = "0.4.4"
clap = { version = "4.1.1", features = ["derive", "cargo"] }

libm = "0.2.6"
more-asserts = "0.3.1"
is-odd = "1.0.0"
core_affinity = "0.7.6"


[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
lto = 'thin'
opt-level = 3
