[package]
name = "system_perf"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-format = "0.4"
clap = { version = "4.5", features = ["derive", "cargo"] }

libm = "0.2"
more-asserts = "0.3"
core_affinity = "0.8"


[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
lto = 'thin'
opt-level = 3
