[package]
name = "hellosimd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
clap = { version = "3.2.18", features = ["derive", "cargo"] }

[profile.release]
lto = 'thin'
opt-level = 3
